[project]
name = "bl4_ordonite_helper"
version = "1"
authors = [{ name = "Lango" }]
description = "Automatically or manually deposite ordonite canisters in the ordonite processor events."

[tool.sdkmod]
name = "Autordonite"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/jlangowells/bl4_ordonite_helper/releases"
version = "1"
coop_support = "ClientSide"